--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,9 +8,9 @@
          id="WebApp_ID" version="4.0">
 
     <display-name>ST4Example1</display-name>
-
+    
     <welcome-file-list>
-        <welcome-file>login.jsp</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
 
@@ -49,7 +49,10 @@
         <servlet-name>Controller</servlet-name>
         <url-pattern>/controller</url-pattern>
     </servlet-mapping>
-
+<!--    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/static/*</url-pattern>
+    </servlet-mapping>-->
 
     <!--============================================================
         Encoding support filter
@@ -78,7 +81,6 @@
         4) out-of-control: commands without access control
         Delimiter - space/tab
     =============================================================-->
-    <!--
         <filter>
             <filter-name>CommandAccessFilter</filter-name>
             <filter-class>ua.kharkov.knure.dkolesnikov.st4example.web.filter.CommandAccessFilter</filter-class>
@@ -92,11 +94,11 @@
             </init-param>
             <init-param>
                 <param-name>common</param-name>
-                <param-value>logout noCommand viewSettings updateSettings</param-value>
+                <param-value>index noCommand viewSettings updateSettings</param-value>
             </init-param>
             <init-param>
                 <param-name>out-of-control</param-name>
-                <param-value>login</param-value>
+                <param-value>login logout</param-value>
             </init-param>
         </filter>
 
@@ -104,7 +106,6 @@
             <filter-name>CommandAccessFilter</filter-name>
             <servlet-name>Controller</servlet-name>
         </filter-mapping>
-    -->
 
 
     <!--============================================================
@@ -127,4 +128,5 @@
         <error-code>404</error-code>
         <location>/WEB-INF/jsp/error_page.jsp</location>
     </error-page>
+
 </web-app>
