List page with bootstap, category divided, ready to submit

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -90,7 +90,7 @@
             </init-param>
             <init-param>
                 <param-name>client</param-name>
-                <param-value>listMenu</param-value>
+                <param-value>listMenu listByCategoryMenu</param-value>
             </init-param>
             <init-param>
                 <param-name>common</param-name>
