--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,10 +8,10 @@
          id="WebApp_ID" version="4.0">
 
     <display-name>ST4Example1</display-name>
-    
-<!--    <welcome-file-list>-->
-<!--        <welcome-file>index.jsp</welcome-file>-->
-<!--    </welcome-file-list>-->
+
+    <!--    <welcome-file-list>-->
+    <!--        <welcome-file>index.jsp</welcome-file>-->
+    <!--    </welcome-file-list>-->
 
 
     <!--============================================================
@@ -50,6 +50,9 @@
         <url-pattern>/index</url-pattern>
         <url-pattern>/one-category-magazines</url-pattern>
         <url-pattern>/one-category-magazines?*</url-pattern>
+        <url-pattern>/create-subscription</url-pattern>
+        <url-pattern>/login</url-pattern>
+        <url-pattern>/login-check</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
@@ -84,39 +87,39 @@
         4) out-of-control: commands without access control
         Delimiter - space/tab
     =============================================================-->
-<!--        <filter>
-            <filter-name>CommandAccessFilter</filter-name>
-            <filter-class>ua.kharkov.knure.dkolesnikov.st4example.web.filter.CommandAccessFilter</filter-class>
-            <init-param>
-                <param-name>admin</param-name>
-                <param-value>listOrders</param-value>
-            </init-param>
-            <init-param>
-                <param-name>client</param-name>
-                <param-value>listMenu listByCategoryMenu</param-value>
-            </init-param>
-            <init-param>
-                <param-name>common</param-name>
-                <param-value>index noCommand viewSettings updateSettings</param-value>
-            </init-param>
-            <init-param>
-                <param-name>out-of-control</param-name>
-                <param-value>login logout</param-value>
-            </init-param>
-        </filter>
+    <filter>
+        <filter-name>CommandAccessFilter</filter-name>
+        <filter-class>ua.kharkov.knure.dkolesnikov.st4example.web.filter.CommandAccessFilter</filter-class>
+        <init-param>
+            <param-name>admin</param-name>
+            <param-value>listOrders</param-value>
+        </init-param>
+        <init-param>
+            <param-name>client</param-name>
+            <param-value>listMenu create-subscription</param-value>
+        </init-param>
+        <init-param>
+            <param-name>common</param-name>
+            <param-value>noCommand viewSettings updateSettings</param-value>
+        </init-param>
+        <init-param>
+            <param-name>out-of-control</param-name>
+            <param-value>index login login-check logout one-category-magazines</param-value>
+        </init-param>
+    </filter>
 
-        <filter-mapping>
-            <filter-name>CommandAccessFilter</filter-name>
-            <servlet-name>Controller</servlet-name>
-        </filter-mapping>-->
+    <filter-mapping>
+        <filter-name>CommandAccessFilter</filter-name>
+        <servlet-name>Controller</servlet-name>
+    </filter-mapping>
 
 
     <!--============================================================
         Context listener
     =============================================================-->
-<!--    <listener>
-        <listener-class>ua.kharkov.knure.dkolesnikov.st4example.web.listener.ContextListener</listener-class>
-    </listener>-->
+    <!--    <listener>
+            <listener-class>ua.kharkov.knure.dkolesnikov.st4example.web.listener.ContextListener</listener-class>
+        </listener>-->
 
 
     <!--============================================================
