--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee https://www.oracle.com/webfolder/technetwork/jsc/xml/ns/javaee/web-app_4_0.xsd"
          id="WebApp_ID" version="4.0">
 
-    <display-name>ST4Example1</display-name>
+    <display-name>Periodical</display-name>
 
     <!--    <welcome-file-list>-->
     <!--        <welcome-file>index.jsp</welcome-file>-->
