--- a/pom.xml
+++ b/pom.xml
@@ -14,31 +14,31 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.tomcat.maven</groupId>
-                    <artifactId>tomcat7-maven-plugin</artifactId>
-                    <version>2.2</version>
-                    <configuration>
-                        <url>http://localhost:8080/manager/text</url>
-                        <server>tomcatserver</server>
-                        <path>/myapp</path>
-                        <username>admin</username>
-                        <password>admin</password>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>2.2</version>
-                    <configuration>
-                        <packagingExcludes>WEB-INF/web.xml</packagingExcludes>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+<!--    <build>-->
+<!--        <pluginManagement>-->
+<!--            <plugins>-->
+<!--                <plugin>-->
+<!--                    <groupId>org.apache.tomcat.maven</groupId>-->
+<!--                    <artifactId>tomcat7-maven-plugin</artifactId>-->
+<!--                    <version>2.2</version>-->
+<!--                    <configuration>-->
+<!--                        <url>http://localhost:8080/manager/text</url>-->
+<!--                        <server>tomcatserver</server>-->
+<!--                        <path>/myapp</path>-->
+<!--                        <username>admin</username>-->
+<!--                        <password>admin</password>-->
+<!--                    </configuration>-->
+<!--                </plugin>-->
+<!--                <plugin>-->
+<!--                    <artifactId>maven-war-plugin</artifactId>-->
+<!--                    <version>2.2</version>-->
+<!--                    <configuration>-->
+<!--                        <packagingExcludes>WEB-INF/web.xml</packagingExcludes>-->
+<!--                    </configuration>-->
+<!--                </plugin>-->
+<!--            </plugins>-->
+<!--        </pluginManagement>-->
+<!--    </build>-->
 
 
     <dependencies>
@@ -74,10 +74,10 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>2.8.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.tomcat</groupId>
-            <artifactId>tomcat-dbcp</artifactId>
-            <version>9.0.45</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.tomcat</groupId>-->
+<!--            <artifactId>tomcat-dbcp</artifactId>-->
+<!--            <version>9.0.45</version>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
