Pagination arrows, numbers, carriage

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,8 +43,8 @@
     <servlet-mapping>
         <servlet-name>Servlet</servlet-name>
         <url-pattern>/index</url-pattern>
-        <url-pattern>/one-category-magazines</url-pattern>
-        <url-pattern>/one-category-magazines?*</url-pattern>
+        <url-pattern>/one-theme-magazines</url-pattern>
+        <url-pattern>/one-theme-magazines?*</url-pattern>
         <url-pattern>/create-subscription</url-pattern>
         <url-pattern>/login</url-pattern>
         <url-pattern>/login-check</url-pattern>
@@ -103,7 +103,7 @@
         </init-param>
         <init-param>
             <param-name>out-of-control</param-name>
-            <param-value>registration-save registration index login login-check logout one-category-magazines</param-value>
+            <param-value>registration-save registration index login login-check logout one-theme-magazines</param-value>
         </init-param>
     </filter>
 
