Exception each layer, Serialization, Registration + front, Settings + front, links, home, Localization switch in settings

--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -7,10 +7,10 @@ log4j.rootLogger = TRACE, console, file
 # Defines logging levels for different loggers
 # TODO Comment this section in production  
 ################################################################
-#log4j.logger.ua.kharkov.knure.dkolesnikov.st4example = TRACE
-#log4j.logger.ua.kharkov.knure.dkolesnikov.st4example.web.filter = INFO
-#log4j.logger.ua.kharkov.knure.dkolesnikov.st4example.web.command = INFO
-#log4j.logger.ua.kharkov.knure.dkolesnikov.st4example.web.command.Controller = Trace
+log4j.logger.com.training.periodical = TRACE
+log4j.logger.com.training.periodical.web.filter = INFO
+log4j.logger.com.training.periodical.web.command = INFO
+log4j.logger.com.training.periodical.controller = Trace
 
 ################################################################
 # Console appender
