--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,6 +55,7 @@
         <url-pattern>/view-settings</url-pattern>
         <url-pattern>/update-settings</url-pattern>
         <url-pattern>/logout</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
